# All_in_llm

./: .gitignore  LICENSE  ollma_install.sh  pyproject.toml  shell.txt
application/agent/: Introduction_For_Agents.ipynb  demo.ipynb  smolagents.ipynb
basic/attention/: MHA.ipynb
basic/embedding/: fasttext.ipynb  one-hot.ipynb
basic/embedding/word2vec/: cbow.py
basic/tokenizer/: BBPE.ipynb  BPE.ipynb  Unigram.ipynb  WordPiece.ipynb
post_training/RL/DRL/: Actor-Critic.ipynb  Dp.ipynb  Dyna.ipynb  MDP.ipynb  Reinforce.ipynb  TD.ipynb  TPRO.ipynb  rl_untils.py
post_training/RL/grpo/: data_pre.py  eval.sh  grpo.py  grpo.sh  merge.sh  merge_lora.py  rewards_fn.py  shell_.txt
post_training/RL/ppo/: test.ipynb  train_ppo.py  train_reward.py
post_training/sft/: eval.sh  get_maxlen.py  gpu.sh  merge.sh  merge.yaml  shell_.txt
post_training/sft/eval_results/Qwen__Qwen2.5-1.5B/: results_2025-10-13T18-03-22.967506.json
post_training/sft/eval_results/Qwen__Qwen2.5-1.5B-Instruct/: results_2025-10-13T16-56-40.671829.json
post_training/sft/eval_results/__root__All_in_llm__models__Qwen2.5-Math-1.5B/: results_2025-10-19T11-29-01.059991.json  results_2025-10-19T11-30-39.864771.json  results_2025-10-19T11-32-20.695298.json  results_2025-10-19T11-34-27.674848.json  results_2025-10-19T11-36-16.758452.json  results_2025-10-19T11-38-11.564136.json
post_training/sft/train_config/: qwen2.5-1.5b-math.yaml  qwen2.5-7b-math copy.yaml  qwen_2_5_base.yaml  qwen_2_5_ins.yaml
practice/text2sql/db/: init_db.sql  sample.db
practice/text2sql/src/: schema_loader.py  sql_executor.py
(+33 files in other folders)
