[project]
name = "all-in-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.2",
    "jieba>=0.42.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "swanlab>=0.6.11",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
